<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>io.avaje</groupId>
        <artifactId>examples</artifactId>
        <version>0.1</version>
    </parent>

    <artifactId>htmx-jex-bootstrap</artifactId>

    <properties>
        <maven.compiler.release>25</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <avaje-jex.version>3.3</avaje-jex.version>
        <jstachio.version>1.3.7</jstachio.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>io.avaje.webview</groupId>
            <artifactId>avaje-webview-all</artifactId>
            <version>0.10</version>
        </dependency>
        
        <dependency>
            <groupId>io.avaje</groupId>
            <artifactId>avaje-simple-logger</artifactId>
            <version>1.3</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-jdk-platform-logging</artifactId>
            <version>2.0.17</version>
        </dependency>
        <dependency> <!-- composite of Jex + JStachio etc -->
            <groupId>io.avaje.kate</groupId>
            <artifactId>avaje-kate-htmx</artifactId>
            <version>0.11</version>
        </dependency>


        <!-- test dependencies -->
        <dependency>
            <groupId>io.avaje</groupId>
            <artifactId>junit</artifactId>
            <version>1.7</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>io.avaje.kate</groupId>
            <artifactId>avaje-kate-test</artifactId>
            <version>0.11</version>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <build>
        <plugins>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.14.1</version>
                <configuration>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>io.avaje.kate</groupId>
                            <artifactId>avaje-kate-generator</artifactId>
                            <version>0.11</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>

            <!-- generated by avaje inject -->
            <plugin>
                <groupId>io.avaje</groupId>
                <artifactId>avaje-inject-maven-plugin</artifactId>
                <version>12.2</version>
                <executions>
                    <execution>
                        <?m2e execute?>
                        <phase>process-sources</phase>
                        <goals>
                            <goal>provides</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>native</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.graalvm.buildtools</groupId>
                        <artifactId>native-maven-plugin</artifactId>
                        <version>0.11.3</version>
                        <executions>
                            <execution>
                                <id>build-native</id>
                                <goals>
                                    <goal>compile-no-fork</goal>
                                </goals>
                                <phase>package</phase>
                                <configuration>
                                    <mainClass>io.example.Main</mainClass>
                                    <jvmArgs>
                                        <jvmArg>--enable-native-access=ALL-UNNAMED</jvmArg>
                                    </jvmArgs>
                                    <buildArgs>
                                        <buildArg>-Ob</buildArg> <!-- fast build -->
                                        <buildArg>-R:MaxHeapSize=200m</buildArg>
                                        <buildArg>--emit build-report</buildArg>
                                        <buildArg>--no-fallback</buildArg>
                                        <buildArg>--allow-incomplete-classpath</buildArg>
                                        <buildArg>-march=compatibility</buildArg>
                                    </buildArgs>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>

        </profile>
    </profiles>

</project>